<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:padding="16dp"
                  android:orientation="vertical">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_salt"/>

        <EditText
                android:id="@+id/edit_salt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_salt"
                style="@style/monospaced_edit_text"
                android:inputType="textVisiblePassword"
                android:text="@string/edit_salt_default"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_password"/>

        <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                style="@style/monospaced_edit_text"
                android:inputType="textVisiblePassword"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_iteration_count"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/edit_iterations"
                android:text="@string/edit_iterations_default"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_memory"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/edit_memory"
                android:text="@string/edit_memory_default"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_argon_mode_and_version"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <Spinner
                    android:id="@+id/spinner_argon_mode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

            <Spinner
                    android:id="@+id/spinner_argon_version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

        </LinearLayout>

        <Button
                android:id="@+id/button_run"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/button_run"
                android:onClick="onClickButtonRun"
                style="@style/Widget.AppCompat.Button.Colored"/>

        <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"/>

        <LinearLayout
                android:id="@+id/layout_output"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/label_output_hash"/>

            <TextView
                    android:id="@+id/text_output_hash"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:fontFamily="monospace"
                    android:onClick="onOutputClicked"
                    tools:text="d34db33f"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/label_output_encoded"/>

            <TextView
                    android:id="@+id/text_output_encoded_string"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:fontFamily="monospace"
                    android:onClick="onOutputClicked"
                    tools:text="a$abcd$0123456"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
